tests/baselines/reference/objectLiteralParameterResolution.errors.txt
==== tests/cases/compiler/objectLiteralParameterResolution.ts (6 errors) ====
    interface Foo{
        extend<T>(target: T, ...objs: any[]): T;
        extend<T>(deep: boolean, target: T, ...objs: any[]): T;
    }
    declare var $: Foo;
    var s = $.extend({
        type: "GET" ,
        data: "data" ,
        success: wrapSuccessCallback(requestContext, callback) ,
                 ~~~~~~~~~~~~~~~~~~~
!!! Cannot find name 'wrapSuccessCallback'.
                                     ~~~~~~~~~~~~~~
!!! Cannot find name 'requestContext'.
                                                     ~~~~~~~~
!!! Cannot find name 'callback'.
        error: wrapErrorCallback(requestContext, errorCallback) ,
               ~~~~~~~~~~~~~~~~~
!!! Cannot find name 'wrapErrorCallback'.
                                 ~~~~~~~~~~~~~~
!!! Cannot find name 'requestContext'.
                                                 ~~~~~~~~~~~~~
!!! Cannot find name 'errorCallback'.
        dataType: "json" ,
        converters: { "text json": "" },
        traditional: true ,
        timeout: 12,
        }, "");
    